@@ -46,6 +46,8 @@ Changes from versions 3.1.* to version 4.0.0:
 - New functions mpfr_nrandom and mpfr_erandom to generate random numbers
   following normal and exponential distributions respectively.
 - New functions mpfr_fmma and mpfr_fmms to compute a*b+c*d and a*b-c*d.
+- New function mpfr_rootn_ui, similar to mpfr_root, but agreeing with the
+  rootn function of the IEEE 754-2008 standard.
 - New functions mpfr_log_ui to compute the logarithm of an integer,
   mpfr_gamma_inc for the incomplete Gamma function, and mpfr_beta for the
   Beta function.
@@ -59,7 +61,8 @@ Changes from versions 3.1.* to version 4.0.0:
   current exponent range and the rounding mode. The exceptions due to the
   rounding of the random number are now correctly generated, following the
   uniform distribution.
-- Function mpfr_grandom is deprecated and will be removed in a future release.
+- Functions mpfr_grandom and mpfr_root are deprecated and will be removed
+  in a future release.
 - Complete rewrite of function mpfr_sum, which now works in all cases (the
   old one could take all the memory and/or crash with inputs of different
   magnitudes in case of huge cancellation or table maker's dilemma). The
